# Rust_IMGRecognition

./: README.md  copy-models.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: mobilenet_v2.onnx
src-tauri/scripts/: setup_models.bat
src-tauri/src/: image_processor.rs  lib.rs  main.rs  model_manager.rs
src/components/: Camera.tsx  ImageSelector.tsx  LoadingIndicator.tsx  ResultsDisplay.tsx
src/services/: recognition.ts
src/styles/: index.css  tailwind.css
