[package]
name = "taurivision"
version = "0.1.0"
description = "Image Recognition App for Android"
authors = ["Developer"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "taurivision_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# In Tauri v2, JNI support is included by default for Android builds
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.24.6"
anyhow = "1.0.72"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
ndarray = "0.15.6"
base64 = "0.21.2"
log = "0.4.19"
env_logger = "0.10.0"
once_cell = "1.18.0"
libc = "0.2"
tract-onnx = "0.18.0"  # For ONNX models
jni = { version = "0.21.1", optional = false }  # Changed to non-optional for Android builds

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[package.metadata.tauri.android]
permissions = [
  "android.permission.CAMERA",
  "android.permission.READ_EXTERNAL_STORAGE",
  "android.permission.READ_MEDIA_IMAGES",
  "android.permission.READ_MEDIA_VIDEO",
  "android.permission.WRITE_EXTERNAL_STORAGE"
]
